--- a/YouPersonalTrainer/Content/Site.css
+++ b/YouPersonalTrainer/Content/Site.css
@@ -744,34 +744,18 @@ ul.MenuFitness .manual-inside {
 .featured {
     background-color: #fff;
 }
-   /* .featured .content-wrapper {
-        background-color: #7ac0da;
-        background-image: -ms-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -o-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: -webkit-gradient(linear, left top, right top, color-stop(0, #7ac0da), color-stop(1, #a4d4e6));
-        background-image: -webkit-linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        background-image: linear-gradient(left, #7ac0da 0%, #a4d4e6 100%);
-        color: #3e5667;
-        padding: 20px 40px 30px 40px;
-    }
-        .featured hgroup.title h1, .featured hgroup.title h2 {
-            color: #fff;
-        }
-        .featured p {
-            font-size: 1.1em;
-        }*/
+   
 
 /* page titles */
 hgroup.title {
-    margin-bottom: 10px;
+    margin-bottom: 5px;
+    text-align: center;
+    font: normal 15px "Corbel";
 }
-hgroup.title h1, hgroup.title h2 {
-    display: inline;
-}
-hgroup.title h2 {
-    font-weight: normal;
-    margin-left: 3px;
-}
+
+   /* hgroup.title::before {
+    content: url(/Content/Images/logo4.jpg);
+    }*/
 
 /* features */
 section.feature {
@@ -871,14 +855,7 @@ aside {
         width: auto;
     }
 
-#socialLoginForm {
-    margin-left: 40px;
-    float: left;
-    width: 40%;
-}
-    #socialLoginForm h2 {
-        margin-bottom:  5px;
-    }
+
 #socialLoginList button {
     margin-bottom: 12px;
 }
@@ -901,7 +878,7 @@ aside {
 /* forms */
 fieldset {
     border: none;
-    margin: 0;
+    margin: 20px 0 10px 100px;
     padding: 0;
 }
     fieldset legend {
@@ -1082,16 +1059,19 @@ tr.pager td {
         margin: 0 0 12px;
         text-align: center;
     }
+
         #login ul {
             margin: 5px 0;
             padding: 0;
         }
+
         #login li {
             display: inline;
             list-style: none;
             margin: 0;
             padding: 0;
         }
+
         #login a {
             background: none;
             color: #999;
@@ -1099,21 +1079,24 @@ tr.pager td {
             margin: 2px;
             padding: 0;
         }
-        #login a:hover {
-            color: #333;
-        }
-  
+
+            #login a:hover {
+                color: #333;
+            }
+
     /* main layout
     ----------------------------------------------------------*/
     .main-content,
     .featured + .main-content {
         background-position: 10px 0;
     }
+
     .content-wrapper {
+        display: none;
         padding-right: 10px;
         padding-left: 10px;
-        
     }
+
     .featured .content-wrapper {
         padding: 10px;
     }
@@ -1128,10 +1111,12 @@ tr.pager td {
         list-style-type: none;
         padding-left: 0;
     }
+
         ol.round li {
             padding-left: 10px;
             margin: 25px 0;
         }
+
             ol.round li.zero,
             ol.round li.one,
             ol.round li.two,
@@ -1145,12 +1130,13 @@ tr.pager td {
                 background: none;
             }
 
-     /* features */
-     section.feature {
+    /* features */
+    section.feature {
         float: none;
         padding: 10px;
         width: auto;
-     }
+    }
+
         section.feature img {
             color: #999;
             content: attr(alt);
@@ -1163,7 +1149,7 @@ tr.pager td {
     }
 
     /* login page */
-    #loginForm {
+    /* #loginForm {
         border-right: none;
         float: none;
         width: auto;
@@ -1176,21 +1162,6 @@ tr.pager td {
         margin-left: 0;
         float: none;
         width: auto;
-    }
-
-    /* footer
-    ----------------------------------------------------------*/
-    footer .float-left,
-    footer .float-right {
-        float: none;
-    }
-    footer {
-        text-align: center;
-        height: auto;
-        padding: 10px 0;
-        
-    }
-        footer p {
-            margin: 0;
-        }
+    }*/
 }
+    
