--- a/YouPersonalTrainer/Views/Account/Login.cshtml
+++ b/YouPersonalTrainer/Views/Account/Login.cshtml
@@ -5,11 +5,11 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
+    <h1>@ViewBag.Title</h1>
 </hgroup>
 
 <section id="loginForm">
-<h2>Use a local account to log in.</h2>
+
 @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
@@ -32,18 +32,14 @@
                 @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
             </li>
         </ol>
-        <input type="submit" value="Log in" />
+        <input type="submit" value="Вход" />
     </fieldset>
-    <p>
-        @Html.ActionLink("Регистрация", "Регистрация") if you don't have an account.
+    <p class="invitation">
+        @Html.ActionLink("Зарегестрируйся", "Register", "Account"), если впервые на нашем сайте!
     </p>
 }
 </section>
 
-<section class="social" id="socialLoginForm">
-    <h2>Use another service to log in.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
