--- a/YouPersonalTrainer/Views/Account/Register.cshtml
+++ b/YouPersonalTrainer/Views/Account/Register.cshtml
@@ -4,8 +4,7 @@
 }
 
 <hgroup class="title">
-    <h1>@ViewBag.Title.</h1>
-    <h2>Create a new account.</h2>
+    <h2>Регистрируйся и достигай своих целей с Твоим личным тренером!</h2>
 </hgroup>
 
 @using (Html.BeginForm()) {
@@ -27,8 +26,16 @@
                 @Html.LabelFor(m => m.ConfirmPassword)
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
+            <li>
+                @Html.LabelFor(m => m.Email)
+                @Html.TextBoxFor(m=> m.Email)
+            </li>
+            <li>
+                @Html.LabelFor(m=>m.Date)
+                @Html.EditorFor(m => m.Date)
+            </li>
         </ol>
-        <input type="submit" value="Register" />
+        <input type="submit" value="Зарегистрироваться" />
     </fieldset>
 }
 
