--- a/YouPersonalTrainer/Views/Home/Journal.cshtml
+++ b/YouPersonalTrainer/Views/Home/Journal.cshtml
@@ -3,3 +3,4 @@
 }
 
 <h2>Journal</h2>
+ <div class="training-top">@Html.ActionLink("Таблица калорийности продуктов", "CaloriesList", "Calories")></div>
