--- a/YouPersonalTrainer/Views/Article/Article.cshtml
+++ b/YouPersonalTrainer/Views/Article/Article.cshtml
@@ -13,43 +13,28 @@
     </ul>
 </div>
 
+
 <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Diet" })">Питание</a></h3>
 
-
+@foreach (var item in Model.Articles)
+{   
+ <ul class="ListArticlesDiet">
+        <li><a href="#">@Html.DisplayFor(modelItem => item.Title)</a></li>
+    </ul>
+}
     <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Training" })">Трениовочный процесс</a></h3>
     <ul class="ListArticlesFitness">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li></li>        
     </ul>
     <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Motivation" })">Мотивация</a></h3>
     <ul class="ListArticlesMotivation">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li></li>      
     </ul>
     <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "Health" })">Здоровье</a></h3>
     <ul class="ListArticlesHealth">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li></li>        
     </ul>
     <h3><a href="@Url.Action("ArticlesList", "Article", new { id = "News" })">Новости</a></h3>
     <ul class="ListArticlesNews">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li></li>        
     </ul>
-
