--- a/YouPersonalTrainer/Views/Journal/Journal_diet.cshtml
+++ b/YouPersonalTrainer/Views/Journal/Journal_diet.cshtml
@@ -3,3 +3,4 @@
 }
 
 <h2>Journal_diet</h2>
+ <div class="training-top">@Html.ActionLink("Таблица калорийности продуктов", "CountingCalories", "Calories")></div>
